emote/backend-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: emote-backend
spec:
  selector:
    app: emote-backend
  ports:
    - protocol: TCP
      port: 80
      targetPort: 5050
  type: ClusterIP
