emote/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: emote
spec:
  selector:
    app: emote
  ports:
    - protocol: TCP
      port: 80
      targetPort: 5050
  type: ClusterIP
